# cathedral-master

./: .env  .gitattributes  .gitignore  .markdownlint.json  .replit  AGENTS.md  AGENT_MEMORY_PERMANENT_RECORD.md  AI_SPAM_DAMAGE_ASSESSMENT_REPORT.md  AI_WORK_COMPREHENSIVE_ANALYSIS.md  ANTI_AGENT_FRAUD_RULES.md  CATHEDRAL_ANTI_SPAM_PROTECTION.md  CATHEDRAL_BUILD_ANALYSIS_COMPLETE.md  CATHEDRAL_COMPREHENSIVE_INTEGRATION_PLAN.md  CATHEDRAL_COMPREHENSIVE_SYNCHRONIZATION_PLAN.md  CATHEDRAL_ECOSYSTEM_FINAL_MAP.md  CATHEDRAL_FINAL_CONSOLIDATION_AUDIT.md  CATHEDRAL_FINAL_STATUS.md  CATHEDRAL_GITLENS_ANALYSIS_REPORT.md  CATHEDRAL_GITLENS_OPTIMIZATION_COMPLETE.md  CATHEDRAL_INTEGRATION_FINAL_REPORT.md  CATHEDRAL_INTEGRATION_MAP.json  CATHEDRAL_INTEGRATION_PROGRESS.md  CATHEDRAL_MASTER_CONSOLIDATION_EXECUTIVE_SUMMARY.md  CATHEDRAL_MASTER_INTEGRATION_BACKUP_PLAN.md  CATHEDRAL_MASTER_INTEGRATION_COMPLETE.md  CATHEDRAL_MASTER_INTEGRATION_PLAN.md  CATHEDRAL_MASTER_SETUP.md  CATHEDRAL_REAL_COMPLETE_UNIVERSE_PRO  CATHEDRAL_REPAIR_SUMMARY.md  CATHEDRAL_STANDARDIZATION_PLAN.md  CATHEDRAL_SYSTEM_AUDIT_COMPLETE.md  CLEANUP_REPO.sh  CODEX_MASTER.md  COMPONENT_OWNERSHIP_REGISTRY.json  CONSOLIDATE_ALL_REPOS.sh  CONSOLIDATION_COMPLETE.md  CONTRIBUTING.md  COPILOT_BUILD_GUIDE.md  COPILOT_INSTRUCTIONS.md  DEPLOYMENT.md  (+103 more)
.github/: AI_AGENT_SELF_RULES.md  PR_BODY_add_external_codex_liber.md  copilot-instructions.md
INCIDENT_REPORTS/: GITHUB_COPILOT_RECURRING_FAILURE_REPORT.md  LINKEDIN_DEVTO_POST.md  SUMMARY_FOR_DISTRIBUTION.md
REGISTRY/: cathedral-master-repository-ecosystem.json  cathedral-v1-provenance.json
apps/: web-from-master  web-from-master.md
assets/: index-NVutBMuc.js
attached_assets/: CLAUDE-CODEX144:99_1761993531582.md  Canon IDs use everywhere codex14499_1761993806302.md  Cathedral LIght GIT KIT (v1)_1761993806302.md  Correct Repo Constellation.md_1761993607162.md  LEONORACARRINGTON.md_1761993607162.md  LIBER-ARCANAE-FULL-NOTES_1761993607162.md  cathedral-integration_1761993929574.js  codex-144-expanded_1761993929573.json
config/: nx.json  (+10 more)
engine/godot-rust/: Cargo.toml  build.sh
engine/godot-rust/src/: lib.rs
godot-rust-integration/: Cargo.toml  project.godot
godot-rust-integration/src/: lib.rs  library_generator.rs
rust-engines/: Cargo.toml
rust-engines/cathedral-core/: Cargo.toml
rust-engines/cathedral-core/src/: lib.rs
rust-engines/cathedral-types/: Cargo.toml
rust-engines/cathedral-types/src/: lib.rs
rust-engines/codex-registry/: Cargo.toml
rust-engines/codex-registry/src/: lib.rs
rust-engines/fusion-kink/: Cargo.toml
rust-engines/fusion-kink/src/: lib.rs
rust-engines/harmonic-lab/: Cargo.toml
rust-engines/harmonic-lab/src/: lib.rs
(+556 files in other folders)
