[workspace]
resolver = "2"
members = [
    "cathedral-core",
    "cathedral-types",
    "fusion-kink",
    "harmonic-lab",
    "codex-registry",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Rebecca Respawn"]
license = "MIT"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glam = "0.27"

# Godot integration (GDExtension, not GDNative)
godot = "0.1"

# Audio synthesis
kira = "0.9"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 1
