[package]
name = "cathedral-engines"
version = "1.0.0"
edition = "2021"

[dependencies]
bevy = "0.14.0"
bevy_egui = "0.27"
bevy_rapier2d = "0.25"
bevy_sprite = "0.14"
bevy_asset_loader = "0.17"
bevy_scene_hook = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
nalgebra = "0.32"

[dev-dependencies]
bevy_dev_tools = "0.14"

[profile.release]
opt-level = 3
debug = false
strip = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
strip = false
codegen-units = 1

[features]
default = ["bevy_default"]
bevy_default = ["bevy/renderer"]
