[package]
name = "cathedral-godot-rust"
version = "0.1.0"
edition = "2021"
authors = ["Rebecca Respawn <bekalah@users.noreply.github.com>"]
license = "MIT"

[lib]
name = "cathedral_godot_rust"
crate-type = ["cdylib"]

[dependencies]
godot = { version = "0.14", features = ["serde", "macros"] }
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
